--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.394"
             app:lottie_autoPlay="true"
-            app:lottie_fileName="whatsapp_spash.json"
+            app:lottie_fileName="whatsappsmile.json"
             app:lottie_loop="true" />
 
         <TextView
